Fixes, a retirement and pork and beans

--- a/main.tex
+++ b/main.tex
@@ -308,28 +308,6 @@ Makes 6 small pies
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Italian Sausage Spaghetti}{\totaltime{2 h}}
-\begin{ingredients}
-1 tbsp olive oil
-4 raw Italian sausage links
-1/4 cup white wine
-32 oz marinara sauce
-1 1/2 cups water
-1 lb spaghetti
-grated parmesan and flat-leaf parsley
-\end{ingredients}
-\nextcolumn
-Serves 4
-\begin{steps}
-    \item Heat oil over medium heat and sear sausages under lid for 5 min on each side
-    \item Move links to a plate and deglaze with wine
-    \item Add sauce and water and bring to a simmer
-    \item Slice cooled links into 4 and return to sauce
-    \item Simmer on low for 1 h 30 min, skimming some of the fat away after 1 h
-    \item Serve on spaghetti with grated parmesan and flat-leaf parsley
-\end{steps}
-\end{denserecipe}
-
 \begin{recipe}{Genius Oatmeal}{\tag{V}\totaltime{25 min}}
 \begin{ingredients}
 2 cups water
@@ -477,7 +455,7 @@ Serves 6
 \begin{denserecipe}{Classic Chicken Salad}{\totaltime{2 h}}
 \begin{ingredients}
 1 3/4 lb chicken breasts
-Salt and black pepper
+salt and black pepper
 2 lemons, divided
 4 sprigs of tarragon
 1 tbsp minced tarragon
@@ -492,7 +470,7 @@ Salt and black pepper
 \nextcolumn
 Serves 4
 \begin{steps}
-    \item Season chicken with salt and pepper and seal into sous-vide bags with slices from 1 lemon
+    \item Season chicken with salt and pepper and seal into bags with 1 sliced lemon and tarragon
     \item Cook chicken in water bath at \celsius{65} for 1 h
     \item Chill chicken in ice bath for 15 min
     \item Meanwhile, add 2 tbsp juice and 1 tsp zest from 1 lemon to a large bowl
@@ -2722,7 +2700,7 @@ Serves 2
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Tangzhong Oat and Carrot Rolls}{\tag{V}\preheat{\fahrenheit{375}}\totaltime{}}
+\begin{denserecipe}{Tangzhong Oat and Carrot Rolls}{\tag{V}\preheat{\fahrenheit{375}}\totaltime{2 h}}
 \begin{ingredients}
 35 g + 415 g flour
 170 g + 170 g milk
@@ -2733,17 +2711,18 @@ Serves 2
 2 dl rolled oats
 2 1/4 tsp instant yeast
 1/2 dl bran
+egg wash
 \end{ingredients}
 \nextcolumn
 Makes enough to fill 2 baking sheets
 \begin{steps}
     \item Cook 35 g flour and 170 g milk on medium heat whisking until thickened
     \item Whisk in remaining milk, carrot, salt, \mbox{molasses}, oil and rolled oats
-    \item Let cool to \celsius{45}
-    \item Combine yeast, bran and remaining flour
-    \item Mix 
+    \item Mix in combined bran, remaining flour and yeast, and knead until very elastic
+    \item Let rise until doubled or in refrigerator overnight, shape, and proof until puffy
+    \item Brush with egg wash, sprinkle with rolled oats and bake at \fahrenheit{375} until golden, 15 minutes
 \end{steps}
-\end{recipe}
+\end{denserecipe}
 
 \begin{recipe}{Gochujang Skirt Steak}{\totaltime{1 h}}
 \begin{ingredients}
@@ -2765,6 +2744,55 @@ Serves 4
     \item Rest under foil for 10 minutes, slice against the grain and sprinkle with more salt
 \end{steps}
 \end{recipe}
+
+\begin{recipe}{Braised Pork Arrabbiata}{\preheat{\fahrenheit{350}}\totaltime{3 h 30 min}}
+\begin{ingredients}
+2 lb pork shoulder, mostly trimmed
+salt and pepper
+2 tbsp olive oil
+10 cloves garlic, smashed
+1 1/2 tsp red pepper flakes
+42 oz fire roasted tomatoes, crushed
+1 cup red wine
+5 sprigs basil
+\end{ingredients}
+\nextcolumn
+Serves 8
+\begin{steps}
+    \item Season pork with salt and pepper
+    \item Brown pork in oil over medium-high
+    \item Cut heat, add garlic and red pepper, and stir until aromatic
+    \item Add tomatoes, red wine and basil
+    \item Bring to boil and braise covered at \fahrenheit{350} until fully tender, 2 1/2 to 3 hours
+    \item Shred meat into bite-sized pieces and stir into the sauce
+\end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Drunken Beans}{\totaltime{2 h 30 min}}
+\begin{ingredients}
+1 lb dry pinto beans
+1/4 lb bacon, sliced
+1 onion, chopped
+4 cloves garlic, chopped
+2 jalapeno or serrano peppers, chopped
+handful cilantro, leaves picked and stems finely chopped
+2 tomatoes, chopped
+salt
+1 bottle beer
+\end{ingredients}
+\nextcolumn
+Serves 8
+\begin{steps}
+    \item Soak beans overnight
+    \item Cook bacon until rendered, lift out and add onions, garlic, peppers and cilantro stems
+    \item Cook until softened and beginning to brown
+    \item Stir in tomatoes, beans and enough soaking liquid to cover by 1 inch
+    \item Season generously with salt
+    \item Bring to boil and simmer until tender, adding water if necessary, 1 to 1 1/2 hours
+    \item Add beer and simmer until creamy, 40 minutes
+    \item Stir in bacon, cilantro leaves and more salt
+\end{steps}
+\end{denserecipe}
 
 % ===========================
 % === New recipe template ===
@@ -2857,6 +2885,29 @@ Serves 2
     \item Top with smoked salmon and more dill
 \end{steps}
 \end{recipe}
+
+% Not popular
+\begin{denserecipe}{Italian Sausage Spaghetti}{\totaltime{2 h}}
+\begin{ingredients}
+1 tbsp olive oil
+4 raw Italian sausage links
+1/4 cup white wine
+32 oz marinara sauce
+1 1/2 cups water
+1 lb spaghetti
+grated parmesan and flat-leaf parsley
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Heat oil over medium heat and sear sausages under lid for 5 min on each side
+    \item Move links to a plate and deglaze with wine
+    \item Add sauce and water and bring to a simmer
+    \item Slice cooled links into 4 and return to sauce
+    \item Simmer on low for 1 h 30 min, skimming some of the fat away after 1 h
+    \item Serve on spaghetti with grated parmesan and flat-leaf parsley
+\end{steps}
+\end{denserecipe}
 
 \fi
 \end{document}
