Fixes and pudding

--- a/main.tex
+++ b/main.tex
@@ -2650,9 +2650,8 @@ Serves 6
 \begin{denserecipe}{Sticky Coconut Chicken and Rice}{\preheat{\fahrenheit{375}}\totaltime{45 min}}
 \begin{ingredients}
 1 1/2 lb chicken thighs
-3 tbsp oil
+1 tbsp oil
 2 tsp kosher salt
-1/2 tsp black pepper
 2 tbsp minced ginger
 1 tbsp minced garlic
 1 1/2 cups sushi rice
@@ -2661,6 +2660,7 @@ Serves 6
 1 bell pepper, chopped
 1/2 cup roasted cashews
 3 scallions, thinly sliced
+1/2 tsp black pepper
 \end{ingredients}
 \nextcolumn
 Serves 4
@@ -2791,6 +2791,35 @@ Serves 8
     \item Bring to boil and simmer until tender, adding water if necessary, 1 to 1 1/2 hours
     \item Add beer and simmer until creamy, 40 minutes
     \item Stir in bacon, cilantro leaves and more salt
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Jello Pudding}{\tag{V}\totaltime{2 h}}
+\begin{ingredients}
+1 cup milk
+4 tsp cornstarch
+2 tbsp sugar
+small pinch of salt
+
+\ihead{Vanilla}
+1 tsp vanilla extract
+1/2 tsp butter, to finish
+
+\ihead{Cocoa}
+remove 1 tsp cornstarch
+2 tbsp cocoa powder
+1 square chocolate, to finish
+\end{ingredients}
+\nextcolumn
+Serves 2
+\begin{steps}
+    \item Whisk together dry ingredients
+    \item Flavor milk with extracts or steeping
+    \item Bring to boil whisking constantly until liquid thickens
+    \item Whisk in fat to finish
+    \item Pour into serving bowls
+    \item Let cool until steaming stops and cover, or leave uncovered to allow a skin to form
+    \item Refrigerate until wobbly, about 2 hours
 \end{steps}
 \end{denserecipe}
 
