Fixes to pudding

--- a/main.tex
+++ b/main.tex
@@ -2803,20 +2803,21 @@ small pinch of salt
 
 \ihead{Vanilla}
 1 tsp vanilla extract
-1/2 tsp butter, to finish
+1/2 tsp butter
 
-\ihead{Cocoa}
+\ihead{Chocolate-Orange}
 remove 1 tsp cornstarch
 2 tbsp cocoa powder
-1 square chocolate, to finish
+1 tsp orange \mbox{blossom water}
+a few chocolate chips
 \end{ingredients}
 \nextcolumn
 Serves 2
 \begin{steps}
     \item Whisk together dry ingredients
-    \item Flavor milk with extracts or steeping
-    \item Bring to boil whisking constantly until liquid thickens
-    \item Whisk in fat to finish
+    \item Whisk dry ingredients into milk
+    \item Whisk over medium-high heat until thickened
+    \item Whisk in extracts and fats
     \item Pour into serving bowls
     \item Let cool until steaming stops and cover, or leave uncovered to allow a skin to form
     \item Refrigerate until wobbly, about 2 hours
