Many recipes from the backlog

--- a/main.tex
+++ b/main.tex
@@ -2824,6 +2824,307 @@ Serves 2
 \end{steps}
 \end{denserecipe}
 
+\begin{recipe}{Cheesy Bean Bake}{\tag{V}\preheat{\fahrenheit{475}}\totaltime{20 min}}
+\begin{ingredients}
+2 tbsp olive oil
+3 cloves garlic, thinly sliced
+3 tbsp tomato paste
+2 (15-ounce) cans white beans, drained and rinsed
+1/2 cup boiling water
+salt and pepper
+1 cup grated mozzarella
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Fry garlic in oil over medium-high until lightly golden
+    \item Stir in tomato paste and fry 30 seconds
+    \item Add beans, water and salt and pepper
+    \item Sprinkle cheese on top and bake until browned in spots, 5 to 10 minutes
+    \item Broil 1-2 minutes if desired
+\end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Brussels Sprouts Caesar Salad}{\tag{V}\preheat{\fahrenheit{425}}\totaltime{35 min}}
+\begin{ingredients}
+2 lb brussels sprouts, trimmed, 3/4 halved and 1/4 thinly sliced
+1/4 cup + 2 tbsp olive oil
+salt and pepper
+4 cups torn sourdough
+1/2 cup grated pecorino
+1 1/2 tbsp lemon juice
+3 cloves garlic, grated
+\end{ingredients}
+\nextcolumn
+Serves 4 to 6
+\begin{steps}
+\item Toss halved sprouts with 1 tbsp oil, salt, and pepper, roast at \fahrenheit{425} until golden, 12 to 20 minutes, tossing halfway through
+\item Toss bread with 2 tbsp oil, bake until crunchy, 14 to 18 minutes, tossing halfway through
+\item To make dressing combine cheese, lemon juice, garlic, 3/4 tsp salt, black pepper, and whisk in remaining 1/3 cup oil
+\item Pour just enough dressing over raw sprouts, massage in, adjust seasoning, add croutons and roasted sprouts, toss well
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Turkey Meatloaf with Zucchini}{\preheat{\fahrenheit{350}}\totaltime{1 h 15 min}}
+\begin{ingredients}
+3/4 cup grated zucchini, squeezed dry
+2 + 4 tbsp ketchup
+1 1/2 tsp Worcestershire sauce
+1 lb ground turkey
+2 tbsp dried onion flakes
+1/3 cup quick oats or breadcrumbs
+1 large egg
+1 tsp marjoram
+1 tsp kosher salt
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+\item In a small bowl, combine 2 tbsp ketchup with Worcestershire sauce
+\item In a medium bowl, combine turkey, zucchini, dried onion, oats or breadcrumbs, egg, 4 tbsp ketchup, salt, and marjoram
+\item Shape into a loaf and place on a baking sheet; spoon sauce on top
+\item Bake uncovered at \fahrenheit{350} for 1 hour
+\item Let sit for 5 minutes before slicing
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Cured Beef Carpaccio}{\totaltime{1 day + 5 h}}
+\begin{ingredients}
+500 g beef tenderloin
+1 tbsp salt
+1 tsp black pepper
+1 tsp thyme
+1 tsp rosemary
+\end{ingredients}
+\nextcolumn
+Serves 10
+\begin{steps}
+\item Clean, trim and pat dry tenderloin
+\item Mix spices and rub onto all surfaces of tenderloin
+\item Wrap in plastic and refrigerate for 24 hours
+\item Remove excess spices from surface, re-wrap, and freeze for 5 hours
+\item Slice semi-frozen beef into very thin slices
+\end{steps}
+
+Serve with olive oil, flaky salt, black pepper, arugula, parmesan shavings, capers, and fresh thyme leaves.
+\end{denserecipe}
+
+\begin{denserecipe}{Nobis Dressing}{\totaltime{10 min}}
+\begin{ingredients}
+1 egg
+1 tbsp Dijon mustard
+1 tbsp + 1 tsp red wine vinegar
+1 tbsp fresh lemon juice
+1/8 tsp garlic, grated
+1/3 cup + 1 tbsp canola oil
+1 tbsp chopped chives
+1/4 tsp kosher salt
+freshly ground white or black pepper
+\end{ingredients}
+\nextcolumn
+Makes 3/4 cup
+\begin{steps}
+\item Soft boil or poach the egg
+\item Blend all ingredients until thick and creamy
+\end{steps}
+
+Serve as a salad dressing, dipping sauce for artichokes, drizzled over asparagus, or as a sauce for grilled or pan-fried fish or chicken.
+\end{denserecipe}
+
+\begin{denserecipe}{Roasted Beef Tenderloin}{\preheat{\fahrenheit{450}}\totaltime{2 h}}
+\begin{ingredients}
+4 lb beef tenderloin, trimmed and tied
+2 tbsp unsalted butter, melted
+1 tbsp soy sauce
+2 tsp Worcestershire sauce
+1 tsp granulated sugar
+kosher salt
+coarsely ground pepper
+chopped parsley
+\end{ingredients}
+\nextcolumn
+Serves 8 to 12
+\begin{steps}
+\item Take beef out 1 h in advance and pat dry
+\item Place beef on foil lined large sheet pan
+\item Mix butter, soy sauce, Worcestershire sauce, sugar and spread evenly over beef
+\item Sprinkle on 1 tsp salt and pat on 2 tsp pepper
+\item Roast until \fahrenheit{120} for medium-rare, 25 to 30 min (check at 20 min)
+\item Transfer beef with foil and juices to a cutting board; let rest 15 to 20 min
+\item Slice beef, arrange on platter, pour over juices, sprinkle with parsley
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Lemon Ricotta Pancakes}{\totaltime{30 min}}
+\begin{ingredients}
+3/4 cup flour
+1 1/2 tsp baking powder
+1 tsp kosher salt
+1/4 cup sugar
+1 lemon
+1 1/2 tsp vanilla extract
+3 eggs
+3/4 cup ricotta
+1/4 cup buttermilk
+2 tbsp melted butter
+more butter for cooking
+\end{ingredients}
+\nextcolumn
+Makes 8 to 10 small pancakes
+\begin{steps}
+\item Whisk together flour, baking powder, and salt
+\item Rub lemon zest into sugar, then whisk in remaining wet ingredients
+\item Stir in flour mixture until smooth
+\item Heat and butter pan on medium-low
+\item Drop scant 1/4 cup batter onto griddle; cook until golden brown and bubbly, 2-3 minutes
+\item Flip, cook other side for 2 minutes
+\item Repeat with remaining batter
+\end{steps}
+Serve with Blueberry Syrup.
+\end{denserecipe}
+
+\begin{recipe}{Blueberry Syrup}{\totaltime{15 min}}
+\begin{ingredients}
+2 cups blueberries
+1 tbsp lemon juice
+1/3 to 1/2 cup maple syrup
+\end{ingredients}
+\nextcolumn
+Yields about 1 1/4 cups
+\begin{steps}
+\item Cook 1 cup blueberries and lemon juice on medium heat until some berries pop, about 2 min
+\item Reduce heat, simmer and stir occasionally for 5 min, until thickened
+\item Stir in 1/3 cup syrup for compote, 1/2 cup for thinner sauce
+\item Add remaining blueberries and simmer until thickened, 5 minutes
+\end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Wontons}{\totaltime{1 h 15 min}}
+\begin{ingredients}
+12 oz peeled shrimp
+1/2 in fresh ginger
+8 oz ground pork
+2 scallions, finely chopped
+2 tbsp cornstarch
+1 tbsp oyster sauce
+2 tsp dry sherry
+1 tbsp soy sauce
+1 tsp sesame oil
+1 tsp granulated sugar
+1/8 tsp white pepper
+50-60 wonton wrappers
+\end{ingredients}
+\nextcolumn
+Makes 50 to 60 wontons
+\begin{steps}
+\item Chop shrimp into 1/2 in pieces, toss with 1/2 tsp kosher salt and let stand
+\item Juice ginger and mix with pork, scallions, cornstarch, oyster sauce, wine, soy sauce, sesame oil, sugar, pepper, 1 tsp kosher salt
+\item To assemble, put 1 tbsp filling on wrapper, fold into triangle, pleat to bring edges to top, press to seal, repeat for all wontons
+\item To cook, add wontons to boiling water, bring back to boil, simmer until they float, continue simmering for 2 minutes
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Sunday Sauce}{\totaltime{3 h 30 min}}
+\begin{ingredients}
+2 lb pork shoulder, cut into 3-inch chunks
+kosher salt and pepper
+1/4 cup olive oil
+1 lb Italian sausage
+1 yellow onion, chopped
+6 garlic cloves, smashed
+1/3 cup red wine
+5 oz crushed tomatoes
+3 basil sprigs
+1 lb uncooked meatballs
+\end{ingredients}
+\nextcolumn
+Serves 6 to 8
+\begin{steps}
+\item Season pork shoulder with salt and pepper, brown in 2 tbsp oil in dutch oven, set aside
+\item Brown sausages, set aside
+\item Saute onion and garlic in remaining oil, seasoned with salt and pepper, until softened
+\item Deglaze with wine and cook out alcohol
+\item Add tomatoes, basil and meats
+\item Add enough water to cover the meats
+\item Simmer gently, partly covered, until pork shoulder is fork-tender, 2 to 2 1/2 hours
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{White Fish in Salty Tomato Sauce}{\totaltime{25 min}}
+\begin{ingredients}
+4 (8-oz) white fish fillets (e.g., cod, halibut)
+kosher salt and pepper
+1/4 cup olive oil
+1 small onion, minced
+4 cloves garlic, sliced
+1/4 tsp red-pepper flakes
+4 cups cherry tomatoes
+1/2 cup white wine
+1/2 tsp sugar, if tomatoes are out-of-season
+3-4 basil leaves, torn
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+\item Fry salted and peppered fish in oil on high heat until it releases, 1 minute, set aside
+\item Cook onion, garlic and red-pepper flakes on medium until translucent, 5 minutes
+\item Add tomatoes, wine and sugar, and cook covered until tomatoes burst, 5 minutes
+\item Uncover, add 1/2 cup water and 1 tsp salt, and boil for 5 minutes more
+\item Add fish browned side up, cover, and cook 3 to 4 minutes until just cooked through
+\item Garnish with torn basil
+\end{steps}
+\end{denserecipe}
+
+\begin{recipe}{Seared Scallops with Jalapeno Vinaigrette}{\totaltime{15 min}}
+\begin{ingredients}
+1 large jalapeno, seeded
+1/4 cup rice vinegar
+1/4 cup olive oil
+1/4 tsp Dijon mustard
+kosher salt and pepper
+1 tbsp oil
+12 large sea scallops, dry packed
+pinch of cayenne
+2 oranges, in supremes
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+\item Blend jalapeno, vinegar, olive oil, mustard until smooth, season with salt and pepper
+\item Season scallops with salt and cayenne
+\item Sear scallops in oil over high heat until well browned, 2 to 3 minutes per side
+\item Arrange scallops and oranges onto plates and drizzle with vinaigrette
+\end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Spicy Roasted Vegetables and Mozzarella}{\preheat{\fahrenheit{425}}\totaltime{1 h}}
+\begin{ingredients}
+1 1/2 lb carrots, peeled
+4 shallots, peeled
+kosher salt and pepper
+5 tbsp olive oil
+1 cup panko bread crumbs
+2 tbsp grated parmesan
+2 cloves garlic, minced
+1/4 tsp red-pepper flakes
+6 oz mozzarella, chopped
+1/4 cup green \mbox{olive slices}
+1 to 2 tbsp lemon juice
+1/3 cup basil, dill, mint
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+\item Halve or quarter carrots into long sticks and cut shallots into 1/2 inch wedges
+\item Toss with salt, pepper and 2 tbsp olive oil
+\item Roast for 25 minutes at \fahrenheit{425}, rotating once
+\item Mix bread crumbs, parmesan, garlic, red-pepper flakes, remaining 3 tbsp oil and a pinch of salt
+\item Sprinkle mozzarella and olives over carrots and shallots, then top with seasoned bread crumbs
+\item Roast until golden brown, 12 to 15 minutes
+\item Drizzle on lemon juice and garnish with herbs
+\end{steps}
+\end{denserecipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
