More recipes and pantry checklist

--- a/main.tex
+++ b/main.tex
@@ -137,6 +137,137 @@
 
 \begin{document}
 
+\begin{card}{Hi fellow cooks!}{}
+This is a collection of recipes that I want to have easily referenceable in my kitchen. These are printable onto 3x5 inch index cards.
+
+Beware that some of the recipes are heavily abbreviated to fit the small format, which might make them hard to follow if they are not familiar in advance.
+\end{card}
+
+\begin{densecard}{Pantry Checklist}{}
+\columnratio{0.333}
+\begin{paracol}{3}
+%\ijoin{}
+%\ihead
+\ihead{Refrigerator}
+yoghurt
+milk
+butter
+ricotta
+eggs
+cottage\ijoin{}cheese
+cheeses
+sour\ijoin{}cream
+potatoes
+carrots
+celery
+peppers
+lemons
+berries
+salsa
+ketchup
+mustard
+miso
+calabrian\ijoin{}chilies
+olives
+gochujang
+capers
+ham
+turkey\ijoin{}bacon
+beer
+
+\ihead{Counter}
+onions
+garlic
+bananas
+tomatoes
+wine
+avocados
+bread
+tortillas
+honey
+sweeteners
+
+\nextcolumn
+
+\ihead{Freezer}
+fish shrimp
+veggies
+smoothie\ijoin{}fruits
+edamame
+dumplings
+
+\ihead{Pantry}
+baking\ijoin{}powders
+yeast
+starches
+\mbox{gelatine}
+whey casein
+PB2
+nuts
+cocoa
+seeds
+oats
+panko
+tahini
+silken\ijoin{}tofu
+flours
+tomatoes+paste
+salts
+sugars
+molasses
+pastas
+shirataki
+soba
+grains
+coconut\ijoin{}milk
+rices
+tea
+coffee
+curry\ijoin{}roux
+pulses
+fishes
+raisins
+stock
+
+\nextcolumn
+
+\ihead{Spice Rack}
+extracts
+peppers
+garlic\ijoin{}powder
+cinnamon
+onion\ijoin{}powder
+thyme
+rosemary
+oregano
+cayenne
+turmeric
+cumin
+red\ijoin{}pepper\ijoin{}flakes
+sumac
+chilli\ijoin{}powder
+bay\ijoin{}leaves
+garam\ijoin{}masala
+\mbox{nutmeg}
+five-spice
+coriander
+cardamom
+paprika
+hon\ijoin{}dashi
+
+\ihead{Sauces Etc.}
+oils
+\mbox{vinegars}
+soy
+fish
+oyster
+hot
+hoisin
+BBQ
+
+\end{paracol}
+\end{densecard}
+
 \begin{recipe}{Banana Almond Pancakes}{\tag{V}\totaltime{20 min}}
 \begin{ingredients}
 1 banana
@@ -3125,6 +3256,91 @@ Serves 4
 \end{steps}
 \end{denserecipe}
 
+\begin{recipe}{Creamy Lemony Pasta}{\totaltime{15 min}}
+\begin{ingredients}
+1 lb short curly pasta
+kosher salt
+black pepper
+1 large lemon, zested and juiced
+3/4 cup grated parmesan
+1/4 cup labneh, greek yoghurt or skyr
+2 scallions, sliced
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+\item Boil pasta just shy of al dente and drain, reserving 1 cup cooking water
+\item Combine pasta with 3/4 cup water, half of lemon juice and pepper to taste
+\item Gradually add parmesan, stirring vigorously over medium-low until silky
+\item Add labneh, remaining lemon juice, lemon zest and scallions, stirring until creamy
+\item Adjust consistency and check seasoning
+\end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Miso-Sesame Cucumber and Avocado Salad}{\totaltime{10 min}}
+\begin{ingredients}
+1/4 cup Miso-Sesame Vinaigrette
+1/2 tsp red-pepper flakes
+2 ripe avocados, peeled and cubed
+1 lb cucumbers, thinly sliced
+2 scallions, sliced
+1 tsp toasted sesame seeds
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+\item Add vinaigrette and red-pepper flakes to cubed avocados and toss gently
+\item Add cucumbers and scallions and toss together
+\item Top with sesame seeds
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Protein Souffle Pancakes}{\totaltime{30 min}}
+\begin{ingredients}
+2 eggs
+40 g fat-free milk
+1/2 tsp vanilla extract
+pinch of kosher salt
+1/8 cup flour
+1 tbsp whey
+1 tbsp casein
+1/4 tsp baking powder
+1 tbsp sugar
+1/8 tsp cream of tartar
+\end{ingredients}
+\nextcolumn
+Serves 2
+\begin{steps}
+\item Separate egg whites and yolks into two bowls
+\item Mix milk, vanilla extract, salt, flour, protein, and baking powder into yolks
+\item Make stiff meringue from egg whites, sugar and cream of tartar
+\item Fold meringue into yolk mixture until just combined
+\item Preheat non-stick pan on low heat, and grease lightly
+\item Pour batter in small mounds, sprinkle water around, cook covered for 4 to 5 minutes, then flip and cook for 4 to 5 minutes more
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Italian Egg Bites}{\preheat{\fahrenheit{350}}\totaltime{30 min}}
+\begin{ingredients}
+300 g egg whites or 6~eggs
+50 g tomatoes, chopped
+25 g spinach, chopped
+25 g mozzarella, \mbox{shredded}
+1 tsp garlic powder
+1 tsp onion powder
+3/4 tsp oregano
+salt and pepper
+\end{ingredients}
+\nextcolumn
+Serves 2
+\begin{steps}
+\item Mix all ingredients except eggs if using whole
+\item Divide mixture into six muffin cases (3 inch)
+\item If using whole eggs, crack one into each case and whisk with a fork until mostly combined
+\item Bake at \fahrenheit{350} for 15 to 18 minutes
+\end{steps}
+\end{denserecipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
@@ -3139,6 +3355,17 @@ Serves
     \item
 \end{steps}
 \end{recipe}
+
+\begin{densecard}{}{\tag{}\preheat{}\totaltime{}}
+\begin{steps}
+    \item
+\end{steps}
+\columnratio{0.333}
+\begin{paracol}{3}
+%\ijoin{}
+%\ihead{}
+\end{paracol}
+\end{densecard}
 
 % =======================
 % === Retired recipes ===
