--- a/main.tex
+++ b/main.tex
@@ -190,11 +190,13 @@ sweeteners
 \nextcolumn
 
 \ihead{Freezer}
-fish shrimp
+fruits
 veggies
-smoothie\ijoin{}fruits
+fish
+shrimp
 edamame
 dumplings
+puff\ijoin{}pastry
 
 \ihead{Pantry}
 baking\ijoin{}powders
@@ -232,28 +234,34 @@ stock
 \nextcolumn
 
 \ihead{Spice Rack}
-extracts
+provencal
+garam\ijoin{}masala
+\mbox{five-spice}
+dashi
+chilli
+garlic
+onion
 peppers
-garlic\ijoin{}powder
-cinnamon
-onion\ijoin{}powder
 thyme
+sumac
 rosemary
 oregano
+cumin
 cayenne
 turmeric
-cumin
-red\ijoin{}pepper\ijoin{}flakes
-sumac
-chilli\ijoin{}powder
+ginger
+cinnamon
+red\ijoin{}pepper
 bay\ijoin{}leaves
-garam\ijoin{}masala
-\mbox{nutmeg}
-five-spice
-coriander
 cardamom
+nutmeg
 paprika
-hon\ijoin{}dashi
+cloves
+allspice
+saffron
+anise
+coriander
+extracts
 
 \ihead{Sauces Etc.}
 oils
@@ -261,9 +269,10 @@ oils
 soy
 fish
 oyster
-hot
 hoisin
+hot
 BBQ
+sweet\ijoin{}chili
 
 \end{paracol}
 \end{densecard}
@@ -2998,21 +3007,21 @@ Serves 4 to 6
 
 \begin{denserecipe}{Turkey Meatloaf with Zucchini}{\preheat{\fahrenheit{350}}\totaltime{1 h 15 min}}
 \begin{ingredients}
-3/4 cup grated zucchini, squeezed dry
 2 + 4 tbsp ketchup
 1 1/2 tsp Worcestershire sauce
 1 lb ground turkey
+3/4 cup grated zucchini, squeezed dry
 2 tbsp dried onion flakes
 1/3 cup quick oats or breadcrumbs
 1 large egg
-1 tsp marjoram
 1 tsp kosher salt
+1 tsp marjoram
 \end{ingredients}
 \nextcolumn
 Serves 4
 \begin{steps}
-\item In a small bowl, combine 2 tbsp ketchup with Worcestershire sauce
-\item In a medium bowl, combine turkey, zucchini, dried onion, oats or breadcrumbs, egg, 4 tbsp ketchup, salt, and marjoram
+\item Mix 2 tbsp ketchup and Worcestershire sauce
+\item Mix 4~tbsp ketchup, turkey, zucchini, dried onion, oats, egg, salt and marjoram
 \item Shape into a loaf and place on a baking sheet; spoon sauce on top
 \item Bake uncovered at \fahrenheit{350} for 1 hour
 \item Let sit for 5 minutes before slicing
@@ -3059,7 +3068,7 @@ Makes 3/4 cup
 \item Blend all ingredients until thick and creamy
 \end{steps}
 
-Serve as a salad dressing, dipping sauce for artichokes, drizzled over asparagus, or as a sauce for grilled or pan-fried fish or chicken.
+Use as salad dressing, for dipping artichokes, over asparagus or on grilled fish.
 \end{denserecipe}
 
 \begin{denserecipe}{Roasted Beef Tenderloin}{\preheat{\fahrenheit{450}}\totaltime{2 h}}
@@ -3151,7 +3160,7 @@ Makes 50 to 60 wontons
 \item Chop shrimp into 1/2 in pieces, toss with 1/2 tsp kosher salt and let stand
 \item Juice ginger and mix with pork, scallions, cornstarch, oyster sauce, wine, soy sauce, sesame oil, sugar, pepper, 1 tsp kosher salt
 \item To assemble, put 1 tbsp filling on wrapper, fold into triangle, pleat to bring edges to top, press to seal, repeat for all wontons
-\item To cook, add wontons to boiling water, bring back to boil, simmer until they float, continue simmering for 2 minutes
+\item To cook, add to boiling water, bring back to boil, simmer until wontons float and continue simmering for 2 minutes more
 \end{steps}
 \end{denserecipe}
 
@@ -3233,7 +3242,7 @@ Serves 4
 1 1/2 lb carrots, peeled
 4 shallots, peeled
 kosher salt and pepper
-5 tbsp olive oil
+2 + 3 tbsp olive oil
 1 cup panko bread crumbs
 2 tbsp grated parmesan
 2 cloves garlic, minced
@@ -3250,7 +3259,7 @@ Serves 4
 \item Toss with salt, pepper and 2 tbsp olive oil
 \item Roast for 25 minutes at \fahrenheit{425}, rotating once
 \item Mix bread crumbs, parmesan, garlic, red-pepper flakes, remaining 3 tbsp oil and a pinch of salt
-\item Sprinkle mozzarella and olives over carrots and shallots, then top with seasoned bread crumbs
+\item Sprinkle mozzarella and olives over carrots and shallots, then top with bread crumb mixture
 \item Roast until golden brown, 12 to 15 minutes
 \item Drizzle on lemon juice and garnish with herbs
 \end{steps}
@@ -3314,9 +3323,9 @@ Serves 2
 \item Separate egg whites and yolks into two bowls
 \item Mix milk, vanilla extract, salt, flour, protein, and baking powder into yolks
 \item Make stiff meringue from egg whites, sugar and cream of tartar
-\item Fold meringue into yolk mixture until just combined
-\item Preheat non-stick pan on low heat, and grease lightly
-\item Pour batter in small mounds, sprinkle water around, cook covered for 4 to 5 minutes, then flip and cook for 4 to 5 minutes more
+\item Fold into yolk mixture until just combined
+\item Preheat lightly greased non-stick pan on low
+\item Pour batter in small mounds, sprinkle water around, cook covered for 4 to 5 minutes, flip and cook for 4 to 5 minutes more
 \end{steps}
 \end{denserecipe}
 
